Switch to using flask-bootstrap

--- a/Pipfile
+++ b/Pipfile
@@ -6,27 +6,27 @@ name = "pypi"
 [packages]
 flask = "*"
 flask-bcrypt = "*"
+flask-bootstrap = "*"
 flask-caching = "*"
 flask-debugtoolbar = "*"
 flask-login = "*"
 flask-mail = "*"
 flask-migrate = "*"
+flask-moment = "*"
 flask-sqlalchemy = "*"
 flask-wtf = "*"
 gunicorn = "*"
-"psycopg2" = "*"
+psycopg2 = "*"
 pyjwt = "*"
 rollbar = "*"
-flask-moment = "*"
-pytest-cov = "*"
 
 [dev-packages]
 factory-boy = "*"
+mypy = "*"
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
 webtest = "*"
-mypy = "*"
 
 [requires]
 python_version = "3.6"
