--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           key: deps1-{{ checksum "package-lock.json" }}
       - run:
           name: Install Node dependencies
-          command: npm install
+          command: npm install --no-save
       - save_cache:
           key: deps1-{{ checksum "package-lock.json" }}
           paths:
