--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: circleci/python:3.6.3
         environment:
           FLASK_CONFIG: testing
-          FLASK_APP: autoapp.py
+          FLASK_APP: run.py
           FLASK_DEBUG: 1
           SECRET_TOKEN: super-secret
     working_directory: ~/repo
