--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,8 @@ jobs:
     docker:
       - image: circleci/python:3.6.3
         environment:
-          FLASK_CONFIG: testing
-          FLASK_APP: run.py
-          FLASK_DEBUG: 1
+          FLASK_APP: app.app
+          FLASK_ENV: testing
           SECRET_TOKEN: super-secret
     working_directory: ~/repo
     steps:
