Add maya to requirements

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ flask-moment = "*"
 flask-sqlalchemy = "*"
 flask-wtf = "*"
 gunicorn = "*"
+maya = "*"
 psycopg2 = "*"
 pyjwt = "*"
 rollbar = "*"
