Removed cov report generation from pytest config. Also, removed always running all tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
           name: Run tests
           command: |
             . venv/bin/activate
-            pytest --cov-report=html
+            pytest --cov app --cov-branch --cov-report=html
       - run:
           name: Code coverage
           command: |
