--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --verbose --cov app --cov-branch --cov-report html tests/ -rsxX --showlocals --tb=short
+addopts = --verbose -rsxX --showlocals --tb=short
 xfail_strict=true
