--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,10 @@ jobs:
           FLASK_ENV: testing
           SECRET_TOKEN: super-secret
           DATABASE_USERNAME: postgres
-          DATABASE_NAME: postgres
+          DATABASE_NAME: myflaskapp-test
       - image: postgres:11.1-alpine
+        environment:
+          POSTGRES_DB: myflaskapp-test
     working_directory: ~/repo
     steps:
       - checkout
