--- a/app.json
+++ b/app.json
@@ -8,7 +8,8 @@
         },
         "rollbar",
         "papertrail",
-        "mailgun"
+        "mailgun",
+        "heroku-redis"
     ],
     "buildpacks": [
         {
@@ -30,6 +31,10 @@
     },
     "formation": {
         "web": {
+            "quantity": 1,
+            "size": "free"
+        },
+        "worker": {
             "quantity": 1,
             "size": "free"
         }
