--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --verbose -rsxX --showlocals --tb=short --cov=app
+addopts = --verbose -rsxX --showlocals --tb=short
 xfail_strict=true
