--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,10 +22,10 @@ repos:
     rev: v2.0.0
     hooks:
     -   id: fixmyjs
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
-    rev: v1.1.0
-    hooks:
-    -  id: htmllint
+#  - repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
+#    rev: v1.1.0
+#    hooks:
+#    -  id: htmllint
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.711
     hooks:
