--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - run:
+          name: Install graphviz
+          command: sudo apt-get install graphviz
       - restore_cache:
           key: deps1-{{ checksum "Pipfile.lock" }}
       - run:
