Switch ephemeral postgres testing to use testing.postgresql

--- a/Pipfile
+++ b/Pipfile
@@ -35,8 +35,8 @@ pre-commit = "*"
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
+"testing.postgresql" = "*"
 webtest = "*"
-pytest-pgsql = "*"
 
 [requires]
 python_version = "3.8"
