--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,9 @@ services:
       - redis
     env_file:
       - .env
+    environment:
+      SQLALCHEMY_DATABASE_URI: postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/myflaskapp
+      REDIS_URL: redis://redis
     volumes:
       - ./app/:/home/myflaskapp/app
       - ./migrations/:/home/myflaskapp/migrations
@@ -55,6 +58,9 @@ services:
       - redis
     env_file:
       - .env
+    environment:
+      SQLALCHEMY_DATABASE_URI: postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/myflaskapp
+      REDIS_URL: redis://redis
     entrypoint: ["./boot-worker.sh"]
     volumes:
       - ./app/:/home/myflaskapp/app
@@ -65,7 +71,7 @@ services:
     - 15432:5432
     restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: myflaskapp
     volumes:
       - .volumes/db:/var/lib/postgresql/data
