--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install graphviz
-          command: sudo apt-get install graphviz
+          name: Install build dependencies
+          command: sudo apt-get install graphviz libgraphviz-dev pkg-config libpq-dev libpq5 postgresql-11
       - restore_cache:
           key: deps1-{{ checksum "Pipfile.lock" }}
       - run:
