--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --verbose -rsxX --showlocals --tb=short
+addopts = --verbose -rsxX --showlocals --tb=short -n 3
 xfail_strict=true
