Add support for messages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,8 @@ services:
       - ./migrations/:/home/myflaskapp/migrations
   db:
     image: postgres:12.1
+    ports:
+      - 5432:5432
     restart: always
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
