Update heroku stack to heroku-18

--- a/app.json
+++ b/app.json
@@ -42,5 +42,6 @@
     "image": "heroku/python",
     "name": "My Flask App",
     "repository": "https://github.com/austinmcconnell/myflaskapp",
+    "stack": "heroku-18",
     "success_url": "/"
 }
