--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,61 @@
 [mypy]
-python_version = 3.6
-follow_imports = silent
+disallow_incomplete_defs = True
 warn_return_any = True
 warn_unused_configs = True
+
+[mypy-flask_babel.*]
+ignore_missing_imports = True
+
+[mypy-flask_wtf.*]
+ignore_missing_imports = True
+
+[mypy-flask_bcrypt.*]
+ignore_missing_imports = True
+
+[mypy-flask_bootstrap.*]
+ignore_missing_imports = True
+
+[mypy-flask_caching.*]
+ignore_missing_imports = True
+
+[mypy-flask_debugtoolbar.*]
+ignore_missing_imports = True
+
+[mypy-flask_login.*]
+ignore_missing_imports = True
+
+[mypy-flask_mail.*]
+ignore_missing_imports = True
+
+[mypy-flask_migrate.*]
+ignore_missing_imports = True
+
+[mypy-flask_moment.*]
+ignore_missing_imports = True
+
+[mypy-flask_sqlalchemy.*]
+ignore_missing_imports = True
+
+[mypy-wtforms.*]
+ignore_missing_imports = True
+
+[mypy-sqlalchemy.*]
+ignore_missing_imports = True
+
+[mypy-secure.*]
+ignore_missing_imports = True
+
+[mypy-maya.*]
+ignore_missing_imports = True
+
+[mypy-pytest.*]
+ignore_missing_imports = True
+
+[mypy-rq.*]
+ignore_missing_imports = True
+
+[mypy-rollbar.*]
+ignore_missing_imports = True
+
+[mypy-eralchemy.*]
+ignore_missing_imports = True
