Update to python 3.9 and add email_validator package

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ redis = "*"
 rollbar = "*"
 rq = "*"
 secure = "*"
+email-validator = "*"
 
 [dev-packages]
 eralchemy = "*"
@@ -40,4 +41,4 @@ pytest-xdist = "*"
 webtest = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.9"
