--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           name: Run mypy checker
           command: |
             . venv/bin/activate
-            mypy app --ignore-missing-imports
+            mypy app
       - run:
           name: Run tests
           command: |
