--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,12 @@ output/*/index.html
 TODO.md
 erd_from_sqlalchemy.png
 .volumes/
+
+# Vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+.history/
