--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,7 @@ services:
     environment:
       DATABASE_URL: postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/myflaskapp
       REDIS_URL: redis://redis
-    entrypoint: ["./boot-worker.sh"]
+    entrypoint: ["rq", "worker", "--url", "$REDIS_URL", "myflaskapp-tasks"]
     volumes:
       - ./app/:/home/myflaskapp/app
       - ./migrations/:/home/myflaskapp/migrations
