--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,9 @@ build-backend = 'setuptools.build_meta'
 [project]
 name = 'myflaskapp'
 readme = 'README.md'
+
+[tool.pytest.ini.options]
+addopts = '--verbose -rsxX --showlocals --tb=short -n 3'
+pythonpath = '. app'
+testpaths = ['test2s']
+xfail_strict = true
