--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,15 +16,15 @@ repos:
       - id: mixed-line-ending
       - id: trailing-whitespace
   - repo: https://github.com/PyCQA/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.10.1
+    rev: v3.17.0
     hooks:
       - id: pyupgrade
-  - repo: https://github.com/pre-commit/mirrors-autopep8
-    rev: v2.0.4
+  - repo: https://github.com/hhatto/autopep8
+    rev: v2.3.1
     hooks:
       - id: autopep8
   - repo: https://github.com/pyCQA/docformatter
@@ -41,12 +41,12 @@ repos:
     hooks:
       - id: yapf
   - repo: https://github.com/pylint-dev/pylint
-    rev: v3.1.0
+    rev: v3.3.1
     hooks:
       - id: pylint
         exclude: ^(migrations)/
   - repo: https://github.com/hadolint/hadolint
-    rev: v2.12.0
+    rev: v2.13.1-beta
     hooks:
       - id: hadolint
         args: ["--ignore", "DL3008", "--ignore", "DL3013", "--ignore", "DL3042"]
@@ -60,7 +60,7 @@ repos:
     hooks:
       - id: fixmyjs
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910-1
+    rev: v1.11.2
     hooks:
       - id: mypy
         additional_dependencies: [types-redis]
