--- a/Pipfile
+++ b/Pipfile
@@ -32,7 +32,7 @@ eralchemy = "*"
 factory-boy = "*"
 flask-shell-ipython = "*"
 mypy = "*"
-pre-commit = "*"
+pre-commit = "3.8.0" # https://github.com/PyCQA/docformatter/pull/287
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
