--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,23 @@
             ],
             "request": "attach",
             "type": "debugpy"
+        },
+        {
+            "args": [
+                "run",
+                "--no-debugger",
+                "--no-reload"
+            ],
+            "env": {
+                "FLASK_APP": "wsgi.py",
+                "FLASK_DEBUG": "1"
+            },
+            "jinja": true,
+            "justMyCode": true,
+            "module": "flask",
+            "name": "Python: Flask",
+            "request": "launch",
+            "type": "debugpy"
         }
     ]
 }
