--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,8 +76,8 @@ max_line_length = 100
 
 [tool.pytest.ini_options]
 addopts = '--verbose -rsxX --showlocals --tb=short -n 3 --cov=app --cov-report=html'
-pythonpath = '. app'
-testpaths = ['test2s']
+# pythonpath = '. app'
+testpaths = ['tests']
 xfail_strict = true
 
 [tool.setuptools]
