--- a/Pipfile
+++ b/Pipfile
@@ -19,7 +19,7 @@ flask-sqlalchemy = "*"
 flask-wtf = "*"
 gunicorn = "*"
 maya = "*"
-psycopg2 = "*"
+psycopg = {version = "*", extras = ["c"]}
 pyjwt = "*"
 python-dotenv = "*"
 redis = "*"
@@ -36,8 +36,8 @@ pre-commit = "3.8.0" # https://github.com/PyCQA/docformatter/pull/287
 pylint = "*"
 pytest = "*"
 pytest-cov = "*"
+pytest-postgresql = "*"
 pytest-xdist = "*"
-"testing.postgresql" = "*"
 types-flask = "*"
 types-redis = "*"
 webtest = "*"
